Update message for thank you page

--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -31,7 +31,7 @@
 <div class="background-wrapper">
     <div class="thank-you-container">
         <h1>Thank You</h1>
-        <p>Your RSVP has been received. We look forward to celebrating with you!</p>
+        <p>Your RSVP has been received. </p>
     </div>
 </div>
 {% endblock %}
