--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        min-height: 100vh; /* Ensures the background covers the full viewport height */
+        height: 100vh; /* Ensures the background covers the full viewport height */
+        overflow: hidden; /* Prevents scrolling */
     }
 
     /* Main Image Styles */
