Disable horiztonal scrolling and move logo to centre of home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,13 @@
 {% block title %}Ananya & Mayank{% endblock %}
 {% block content %}
 <style>
+    body, html {
+        overflow-x: hidden; /* Prevent horizontal scrolling */
+        height: 100%; /* Ensure full height for centering */
+        margin: 0;
+        padding: 0;
+    }
+
     .background-wrapper {
         background: url('../static/images/backgrounds/background-3.png') no-repeat center center fixed;
         background-size: cover;
@@ -13,61 +20,62 @@
         overflow: hidden; /* Prevents scrolling */
     }
 
-    /* Main Image Styles */
-    .main-image {
+    .logo-container {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 5px; /* Adds space between the logo and text */
+        margin-top: -100px;
     }
 
-    .main-image img {
+    .logo-container img {
         width: 100%;
         height: auto;
     }
 
-    .home-details {
+    .text-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
         opacity: 1;
-        margin-top: 10px;
+        margin-top: 5px; /* Add some space above the text */
     }
 
-    .home-details h3, .home-details h5 {
+    .text-container h3, .text-container h5 {
         margin: 0;
         color: #d9534f;
         font-family: 'Cinzel', serif;
     }
 
-    .home-details h3 {
+    .text-container h3 {
         font-size: 18px;
     }
 
-    .home-details h5 {
+    .text-container h5 {
         font-size: 16px;
     }
 
     /* Media query for mobile view */
     @media (max-width: 767px) {
-        .main-image img {
+        .logo-container img {
             width: 150%; /* Adjust the percentage as needed */
         }
     }
 
     @media (min-width: 768px) {
-        .main-image img {
+        .logo-container img {
             width: 60%; /* Adjust the percentage as needed */
         }
     }
 
 </style>
 <div class="background-wrapper">
-    <div class="main-image">
+    <div class="logo-container">
         <img src="{{ url_for('static', filename='images/home/logo.png') }}" alt="Ananya & Mayank">
     </div>
-    <div class="home-details">
+    <div class="text-container">
         <h3>November 21st - 22nd, 2024</h3>
         <h5>{{ days_to_go }} DAYS TO GO!</h5>
     </div>
