--- a/templates/home.html
+++ b/templates/home.html
@@ -14,18 +14,18 @@
         background-size: cover;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start; /* Align items at the top */
         align-items: center;
         height: 100vh; /* Ensures the background covers the full viewport height */
         overflow: hidden; /* Prevents scrolling */
+        padding-top: 50px; /* Adjust this value to add spacing from the top */
     }
 
     .logo-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: 5px; /* Adds space between the logo and text */
-        margin-top: -100px;
+        margin-bottom: 10px; /* Adds space between the logo and text */
     }
 
     .logo-container img {
@@ -40,7 +40,6 @@
         align-items: center;
         text-align: center;
         opacity: 1;
-        margin-top: 5px; /* Add some space above the text */
     }
 
     .text-container h3, .text-container h5 {
