--- a/templates/travel.html
+++ b/templates/travel.html
@@ -53,11 +53,11 @@
         flex: 1;
         max-width: 100%;
         height: auto; /* Adjust height for mobile view */
-        padding: 20px; /* Adjusted padding */
+        padding: 8px; /* Adjusted padding */
         display: flex;
         flex-direction: column;
         align-items: flex-start; /* Ensure content starts at the top */
-        background-color: rgba(255, 255, 255, 0); /* White with 20% opacity */
+        background-color: rgba(255, 255, 255, 0.2); /* White with 20% opacity */
         backdrop-filter: blur(10px); /* Optional: adds a blur effect behind the text */
         color: #333; /* Text color */
         border-radius: 8px; /* Optional: adds rounded corners */
@@ -68,6 +68,15 @@
             height: 100%; /* Ensure the content takes up the full height on larger screens */
             overflow-y: auto; /* Enable vertical scrolling for the content on larger screens */
         }
+    }
+    .travel-card {
+        background-color: rgba(255, 255, 255, 0.2); /* White with 80% opacity */
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        margin-bottom: 20px;
+        padding: 20px;
+        width: 100%;
+        box-sizing: border-box; /* Ensure padding doesn't cause overflow */
     }
     .travel-content h2 {
         font-size: 2em;
@@ -116,6 +125,7 @@
         <img class="slide" src="static/images/travel/travel-4.jpg" alt="Jaipur Image 4">
     </div>
     <div class="travel-content">
+        <div class="travel-card">
         <h2 class="page-heading">Travel Information</h2>
         <div class="travel-item">
             <button class="travel-question">Event Date and Venue</button>
@@ -188,6 +198,7 @@
                 <p>This guide can be helpful for shopping: <a href="https://www.travelandleisureasia.com/in/destinations/india/guide-to-shopping-in-jaipur/">Guide to Shopping in Jaipur</a> or hit us up for recommendations!</p>
             </div>
         </div>
+    </div>
     </div>
 </div>
 
