--- a/templates/base.html
+++ b/templates/base.html
@@ -10,16 +10,16 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Ananya & Mayank's Wedding">
-    <meta property="og:description" content="Join us in celebrating the wedding of Ananya and Mayank.">
-    <meta property="og:image" content="https://www.mayaanya.com/static/images/home/logo.png">
-    <meta property="og:url" content="https://www.mayaanya.com">
+    <meta property="og:description" content="Join us in celebrating the wedding of Ananya and Mayank! Find all the details about the events, travel, and more.">
+    <meta property="og:image" content="{{ url_for('static', filename='images/home/logo.png') }}">
+    <meta property="og:url" content="{{ url_for('home', _external=True) }}">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ananya & Mayank's Wedding">
-    <meta name="twitter:description" content="Join us in celebrating the wedding of Ananya and Mayank.">
-    <meta name="twitter:image" content="https://www.mayaanya.com/static/images/home/logo.png">
+    <meta name="twitter:description" content="Join us in celebrating the wedding of Ananya and Mayank! Find all the details about the events, travel, and more.">
+    <meta name="twitter:image" content="{{ url_for('static', filename='images/home/logo.png') }}">
 </head>
 <body>
 <header>
