--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
         overflow-x: hidden; /* Prevent horizontal scrolling */
         height: 100%; /* Ensure full height for centering */
         margin: 0;
+        padding: 0; /* Ensure no padding */
     }
 
     .background-wrapper {
@@ -15,9 +16,8 @@
         flex-direction: column;
         justify-content: flex-start; /* Align items at the top */
         align-items: center;
-        height: 100vh; /* Ensures the background covers the full viewport height */
+        min-height: 100vh; /* Ensures the background covers the full viewport height */
         overflow: hidden; /* Prevents scrolling */
-        padding-top: 50px; /* Adjust this value to add spacing from the top */
     }
 
     .logo-container {
@@ -25,10 +25,11 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 10px; /* Adds space between the logo and text */
+        padding-top: 50px; /* Adjust this value to add spacing from the top */
     }
 
     .logo-container img {
-        width: 100%;
+        max-width: 100%;
         height: auto;
     }
 
@@ -67,7 +68,6 @@
             width: 60%; /* Adjust the percentage as needed */
         }
     }
-
 </style>
 <div class="background-wrapper">
     <div class="logo-container">
