--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
         flex-direction: column;
         justify-content: flex-start; /* Align items at the top */
         align-items: center;
-        height: 100vh; /* Ensures the background covers the full viewport height */
+        min-height: 100vh; /* Ensures the background covers the full viewport height */
         overflow: hidden; /* Prevents scrolling */
         padding-top: 50px; /* Adjust this value to add spacing from the top */
     }
