Add location for wedding in the schedule page

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -153,7 +153,7 @@
             </div>
             <div class="event-info">
                 <p><strong>Time:</strong> 12 pm onwards </p>
-                <p><strong>Venue:</strong> Mughal Gardens</p>
+                <p><strong>Venue:</strong> Mughal Gardens, Samode Bagh</p>
                 <p><strong>Suggested Attire:</strong> Indian, Pastel hues</p>
             </div>
         </div>
