--- a/templates/rsvp_form.html
+++ b/templates/rsvp_form.html
@@ -120,7 +120,7 @@
                     </select>
                 </div>
                 <div class="form-group" id="transportation_group" style="display: none;">
-                    <label for="need_transportation">Will you need transportation from the airport?</label>
+                    <label for="need_transportation">Will you need transportation from the airport / railway station?</label>
                     <select id="need_transportation" name="need_transportation" class="form-control">
                         <option value="" disabled selected>Select an option</option>
                         <option value="yes">Yes</option>
