Add link to shared Spotify playlist

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -94,6 +94,13 @@
         margin: 5px 0;
     }
 
+    .divider {
+        width: 100%;
+        height: 2px;
+        background-color: rgba(0, 0, 0, 0.8);
+        margin-bottom: 20px;
+    }
+
     /* Responsive adjustments */
     @media (max-width: 768px) {
         .event-section {
@@ -170,6 +177,18 @@
                 <p><strong>Time:</strong> 7:30 pm onwards</p>
                 <p><strong>Venue:</strong> Ballroom, Samode Bagh</p>
                 <p><strong>Suggested Attire:</strong> Prom / Party Wear</p>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <div class="event-section">
+            <div class="event-header">
+                <div class="event-details">
+                    <p>Which songs would you love to dance on? Contribute to our playlist:
+                        <a href="https://open.spotify.com/playlist/2N1rmd9B0SxHM2U3osWkFN?si=b8e8f4400d51493a&pt=4c95b54d80c45d2fc8ae58c02bd4c9d9">
+                            Spotify</a></p>
+                    <br>
+                    <p>Hit us up if you're unable to join the playlist. </p>
+                </div>
             </div>
         </div>
     </div>
