--- a/templates/rsvp_form.html
+++ b/templates/rsvp_form.html
@@ -151,6 +151,10 @@
                     <label for="contact_info">What would be the best way to contact you? Please enter the country code as well.</label>
                     <input type="text" id="contact_info" name="contact_info" class="form-control">
                 </div>
+                <div class="form-group">
+                    <label for="additional_notes">Is there anything else you'd like to inform us about?</label>
+                    <input type="text" id="additional_notes" name="additional_notes" class="form-control">
+                </div>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn">Submit</button>
