--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -149,10 +149,10 @@
 
 <div class="story-page-container">
     <div class="slideshow-container">
-        {% for i in range(1, 30) %}
+        {% for i in range(1, captions|length + 1) %}
         <div class="polaroid {% if i == 1 %}active-slide{% endif %}">
             <img src="../static/images/our-story/timeline-{{ i }}.jpg" alt="Polaroid Image {{ i }}">
-            <div class="caption">Caption for Image {{ i }}</div>
+            <div class="caption">{{ captions[i-1] }}</div>
         </div>
         {% endfor %}
     </div>
