--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -105,7 +105,7 @@
         flex: 1;
         max-width: 100%;
         height: auto; /* Adjust height for mobile view */
-        padding: 8px; /* Adjusted padding */
+        padding: 20px 8px 8px; /* Adjusted padding */
         display: flex;
         flex-direction: column;
         align-items: flex-start; /* Ensure content starts at the top */
