Add padding-bottom to slideshow-container page

--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -29,6 +29,7 @@
         align-items: flex-start; /* Align items to the center */
         justify-content: center; /* Center the image */
         padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     @media (min-width: 768px) {
